# homebrew-sidemash

./: .gitignore  Cargo.toml  README.md  snapcraft.yaml
Formula/: sidemash.rb
src/: auth.rs  auth_access_cmd.rs  auth_access_service.rs  boolean.rs  config_cmd.rs  config_service.rs  configuration.rs  domain_cmd.rs  domain_service.rs  hook.rs  http.rs  list_form.rs  main.rs  occurrence_cmd.rs  occurrence_service.rs  sdm.rs  stream_cmd.rs  stream_service.rs  stream_square_cmd.rs  stream_square_hook.rs  stream_square_hook_field.rs  stream_square_hook_form.rs  stream_square_service.rs  util.rs
