[package]
name = "sidemash"
version = "0.1.0-alpha1"
authors = ["Sidemash Cloud <opensource@sidemash.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Official SDK for Sidemash Cloud in CLI"
homepage    = "https://developers.sidemash.com/docs/v1.0/cli"
repository  = "https://github.com/sidemash/cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
structopt = "0.3.17"
anyhow = "1.0"
confy = "0.4.0"
dirs = "3.0.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
hmac = "0.9.0"
base64 = "0.12.3"
sha2 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
